# rh-skills

./: .env.example  .gitignore  .tool-versions  AGENTS.md  CLAUDE.md  DEVELOPER.md  Makefile  README.md  RESEARCH.md  package-lock.json  package.json  pyproject.toml  tracking.yaml
.github/workflows/: skill-build.yml
.specify/integrations/: codex.manifest.json  copilot.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
docs/: COMMANDS.md  DISCOVERY.md  EXTRACT.md  FORMALIZE.md  FORMALIZE_STRATEGIES.md  GETTING_STARTED.md  INGEST.md  INTRODUCTION.md  QUICKSTART.md  SKILLS.md  SKILL_AUTHORING.md  SKILL_DISTRIBUTION.md  USAGE_MODES.md  WINDOWS_PYTHON_INSTALLATION.md  WINDOWS_VM_CONTRIBUTING.md  WORKFLOW.md
eval/scenarios/: README.md
example-project/: README.md  tracking.yaml
example-project/sources/: ada-guidelines-2024.md
schemas/: extract-plan-schema.yaml  l2-schema.yaml  tracking-schema.yaml
scripts/: build-skills.sh  eval-skill.sh
skills/_profiles/: agents-md.yaml  claude.yaml  copilot.yaml  gemini.yaml
skills/_template/: SKILL.md  reference.md
skills/diabetes-screening/: SKILL.md  tracking.yaml
specs/001-hi-skills-framework/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-rh-skills-framework/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-hi-agent-skills/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-rh-agent-skills/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-hi-discovery/: data-model.md  plan.md  quickstart.md  reference.md  research.md  spec.md  tasks.md
specs/003-rh-inf-discovery/: data-model.md  plan.md  quickstart.md  reference.md  research.md  spec.md  tasks.md
specs/004-hi-ingest/: spec.md
specs/004-rh-inf-ingest/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-hi-extract/: spec.md
specs/005-rh-inf-extract/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-hi-formalize/: spec.md
specs/006-rh-inf-formalize/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-hi-verify/: spec.md
specs/007-rh-inf-verify/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-hi-status/: spec.md
specs/008-rh-inf-status/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/009-skill-build-system/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/010-l2-artifact-catalog/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/011-formalize-strategies/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/hi/: __init__.py  (+2 more)
templates/: SKILL.md  tracking.yaml
tests/: conftest.py  test_fhir_normalize.py  test_fhir_packaging.py  test_fhir_validate.py  test_formalize_command.py  test_helper.bash  test_package_command.py
(+317 files in other folders)
