[project]
name = "rh-skills"
version = "0.1.0"
description = "RH Skills CLI for informatics workflows"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.0",
    "httpx>=0.27",
    "markdownify>=0.13",
    "ruamel.yaml>=0.18",
]

[project.scripts]
rh-skills = "hi.cli:main"
hi = "hi.cli:main"

[project.urls]
Repository = "https://github.com/your-org/rh-skills"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hi"]

[tool.hatch.build.targets.wheel.force-include]
"src/hi/schemas" = "hi/schemas"
"skills/.curated" = "hi/skills"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-httpx>=0.30",
]

[tool.uv]
# End users install with: uv tool install rh-skills
# Dev setup: uv sync && uv run rh-skills --help

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
